<resources>
    <string name="app_name">Wasfa</string>
    <string name="follow">FOLLOW</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="prepare_time">Prepare Time:</string>
    <string name="categories">Categories:</string>
    <string name="send_to">Send to</string>

    <string name="next">Next</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_photos">Add Photos / Videos</string>
    <string name="desc_hint">What recipe do you want talk about?</string>
    <string name="public_tag" translatable="false">Public</string>
    <string name="category_msg">Recipe Category </string>
    <string name="ingredients_msg">The Recipe ingredients</string>
    <string name="no_ingredients">No ingredients yet</string>
    <string name="who_can_msg">Who can see this post?</string>
    <string name="privacy_msg">Your post will be visible on feed, on your profile and in search results</string>
    <string name="ingredient_hint">Enter the ingredient</string>
    <string name="recipe_steps_hint">Enter the recipe steps</string>
    <string name="recipe_from">Recipe from</string>
    <string name="Recipe_prepare_time">Recipe prepare time</string>
    <string name="Back">Back</string>

    <!--search strings-->
    <string name="search_people">Search people</string>
    <string name="search_recipe">Search recipes</string>
    <string name="edit">Edit</string>
    <string name="my_name" translatable="false">Mahmoud Mamdouh</string>
    <string name="youssef" translatable="false">Youssef Mohamed</string>
    <string name="tst" translatable="false">the most popular chef in the world that will make the best recipes in the worldthe most popular chef in the world that will make the best recipes in the worldthe most popular chef in the world that will make the best recipes in the world</string>
    <string name="bio_test" translatable="false">the most popular chef in the world that will make the best recipes in the world</string>
    <string name="interactions">Interactions</string>
    <string name="you">You</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="or">or</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="user_name">UserName</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="splash_msg">The best place to find your recipe</string>
    <string name="copy_right">Copyright © 2021 WASFA. All right reserved</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="bio">Bio</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="view_photo">View photo</string>
    <string name="cancel">Cancel</string>
    <string name="most_common">Most common</string>
    <string name="people">People</string>
    <string name="recipes">Recipes</string>
    <string name="enter_a_few_words_to_search_in_wasfa">Enter a few words to search in Wasfa</string>
    <string name="no_result_found">No result found</string>
    <string name="add_comment">Add Comment</string>
    <string name="comments">comments</string>
    <string name="show_more">Show more</string>
    <string name="ingredient">Ingredient:</string>
    <string name="steps">Steps:</string>
    <string name="share_recipe">Share recipe</string>
    <string name="the_recipe_steps">The recipe steps</string>
    <string name="_2" translatable="false">+2</string>

    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="love">Love</string>
    <string name="privacy1" translatable="false">Public</string>
    <string name="anyone_if_follower_or_not">Anyone if follower or not</string>
    <string name="only_me" translatable="false">Only Me</string>
    <string name="only_you_can_see_this_recipe">Only You can see this recipe</string>
    <string name="nationality">Nationality</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="interaction">Interaction</string>
    <string name="account">Account</string>
    <string name="No_internet_connection">No Interner Connection</string>
    <string name="Exit">Exit</string>
    <string name="phone_or_pass">Phone / Email</string>
</resources>