<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/takephoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:padding="@dimen/standered_margin"
        android:textSize="@dimen/_16ssp"
        android:background="#ffffff"
        android:textColor="#000000"/>
    <TextView android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_from_gallery"
        android:padding="@dimen/standered_margin"
        android:textSize="@dimen/_16ssp"
        android:background="#ffffff"
        android:textColor="#000000"/>
    <TextView android:id="@+id/viewphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_photo"
        android:padding="@dimen/standered_margin"
        android:textSize="@dimen/_16ssp"
        android:background="#ffffff"
        android:textColor="#000000"/>
    <TextView android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="@dimen/standered_margin"
        android:textSize="@dimen/_16ssp"
        android:background="#ffffff"
        android:textColor="#000000"/>
</LinearLayout>