<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.registration.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_background"
        android:padding="@dimen/_20sdp">


        <androidx.cardview.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24ssp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullName_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:counterEnabled="true"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:boxStrokeColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:inputType="text"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_textInput"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:boxStrokeColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateOfBirth_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:boxStrokeColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:inputType="phone"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="0dp"
                        android:text="@string/male"
                        android:textSize="@dimen/_12ssp" />

                    <RadioButton
                        android:id="@+id/female_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="0dp"
                        android:text="@string/female"
                        android:textSize="@dimen/_12ssp" />
                </RadioGroup>

                <Button
                    android:id="@+id/login"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/login_background"
                    android:text="@string/register_now"
                    android:textAllCaps="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/or"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:id="@+id/face_google_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:src="@drawable/facebook_icon"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/google_icon"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/muli"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:id="@+id/login_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_black"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>
