<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.profile.EditProfileActivity"
    android:background="@drawable/account_red"
    android:padding="@dimen/standered_margin">


    <ImageButton android:id="@+id/edit_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="#00FFFFFF"/>
    <ImageButton android:id="@+id/edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_save_24"
        android:background="@drawable/button_shap_2"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_save"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/acc_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:civ_border_width="10dp"
                app:civ_border_color="#FFFFFFFF"
                android:src="@drawable/thanos_mcu" />
            <ImageButton
                android:id="@+id/edit_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_photo_camera_24" />
            </RelativeLayout>
            <EditText android:id="@+id/edit_acc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_24ssp"
                android:hint="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="Thanos"/>
            <EditText android:id="@+id/edit_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/address"
                android:textColor="@color/colorSecText"
                android:text="Giza, Egypt"/>
            <EditText android:id="@+id/edit_Bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/bio"
                android:textColor="@color/colorSecText"
                android:text="King of the fucking world "/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_4sdp">
                <EditText android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_34sdp"
                    android:drawablePadding="@dimen/_3sdp"
                    android:drawableStart="@drawable/icons8_instagram_24px"
                    android:hint="@string/instagram"
                    />
                <EditText android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_34sdp"
                    android:drawablePadding="@dimen/_3sdp"
                    android:drawableStart="@drawable/icons8_facebook_24px_1"
                    android:hint="@string/facebook"
                     />
                <EditText android:id="@+id/youtube"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_34sdp"
                    android:drawablePadding="@dimen/_3sdp"
                    android:drawableStart="@drawable/icons8_youtube_24px"
                    android:hint="@string/youtube"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <ImageView android:id="@+id/ViewImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentDark"
        android:visibility="gone"/>
</RelativeLayout>