<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.login.LoginActivity"
    android:background="#F7F6FF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_25sdp"
        android:background="@drawable/login_register_background">


        <androidx.cardview.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24ssp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgetPass_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/muli"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/_11ssp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/login_background"
                    android:text="@string/login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/or"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/facebook_imageView"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:src="@drawable/facebook_icon"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ImageView
                        android:id="@+id/google_imageView"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/google_icon"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_cardView"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/muli"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/register_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_black"
                android:text="@string/register_now"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
